# partial-convolution-lst-gap-filling

./: .gitignore  README.md  main.py  pyproject.toml
data/: lst_config.yaml
data/matchup/: matchup_station_modis_lst_README.md
notebooks/: prototype_data_matchups.ipynb  station_specific_regression.ipynb
notebooks/Baseline-LightGBM/: baseline_RF_Masters_Thesis.ipynb
notebooks/Partial-Conv-UNet/: Data-Exploration.ipynb  Partial-Unet.ipynb
notebooks/station_data_extraction/: station_data.py
src/lst_filler/: __init__.py  spatial.py  utils.py
src/lst_filler/data/: __init__.py  matchup.py  modis.py  other.py  stations.py
src/station_data_extraction/: convert_to_parquet.py  handling_error_ids.py
