[project]
name = "partial-convolution-lst-gap-filling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "numpy==1.26.4",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "xarray>=2025.6.1",
    "xgboost>=3.0.2",
]
